syntax = "proto3";

package counter_service;

service CounterService {
    rpc Get(GetRequest) returns (GetResponse);
    rpc Increment(IncrementRequest) returns (IncrementResponse);
    rpc Set(SetRequest) returns (SetResponse);
    rpc CompareAndSet(CompareAndSetRequest) returns (CompareAndSetResponse);
}

message GetRequest {}

message GetResponse {
    int64 value = 1;
    string error = 2;
    NotLeaderInfo not_leader = 3;
}

message IncrementRequest {
    int64 amount = 1;
}

message IncrementResponse {
    bool success = 1;
    int64 value = 2;
    string error = 3;
    NotLeaderInfo not_leader = 4;
}

message SetRequest {
    int64 value = 1;
}

message SetResponse {
    bool success = 1;
    int64 value = 2;
    string error = 3;
    NotLeaderInfo not_leader = 4;
}

message CompareAndSetRequest {
    int64 expected = 1;
    int64 value = 2;
}

message CompareAndSetResponse {
    bool success = 1;
    int64 value = 2;
    string error = 3;
    NotLeaderInfo not_leader = 4;
}

message NotLeaderInfo {
    uint32 leader_port = 1;
}
